# c_gtk_samples

./: CMakeLists.txt
sample1/: README.md  main.c  sample.glade
